[package]
name = "ckb-vm-contrib"
description = "Collection of decoupled code for ckb-vm"
version = "0.3.0"
license = "MIT"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2021"

[features]
default = []
llvm-aot = [
  "ckb-vm/asm",
  "llvm-sys",
  "memoffset",
  "region",
  "rustc-demangle",
  "blake3",
  "libc",
  "paste"
]

[dependencies]
ckb-vm = "0.23.0"
goblin = "=0.4.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.5.4"

blake3 = { version = "1.3.1", optional = true }
llvm-sys = { version = "150.0.3", optional = true }
memoffset = { version = "0.6.5", optional = true }
region = { version = "3.0.0", optional = true }
rustc-demangle = { version = "0.1", optional = true }
libc = { version = "0.2.132", optional = true }
paste = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
flexi_logger = "0.23.0"
clap = { version = "3.2.20", features = ["derive"] }
tempfile = "3.3.0"
which = "4.3.0"

[[example]]
name = "ckb-vm-llvm-aoter"
required-features = ["llvm-aot"]
