[package]
name = "ckb-vm-contrib"
description = "Collection of decoupled code for ckb-vm"
version = "0.3.0"
license = "MIT"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2021"

[features]
default = []
llvm-aot = [
  "ckb-vm/asm",
  "llvm-sys",
  "inkwell",
  "either",
  "memoffset",
  "region",
  "rustc-demangle",
  "blake3",
  "libc",
  "paste",
  "rust-lapper"
]
probes = ["probe"]

[dependencies]
# ckb-vm = "0.24.0"
ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm", rev = "bac62f8" }
goblin = "=0.4.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.5.4"

blake3 = { version = "1.3.1", optional = true }
either = { version = "1.8.1", optional = true }
llvm-sys = { version = "150.0.3", optional = true }
inkwell = { version = "0.1.1", features = ["llvm15-0"], optional = true }
memoffset = { version = "0.6.5", optional = true }
region = { version = "3.0.0", optional = true }
rustc-demangle = { version = "0.1", optional = true }
libc = { version = "0.2.132", optional = true }
paste = { version = "1.0", optional = true }
probe = { version = "0.5.0", optional = true }
rust-lapper = { version = "1.1.0", optional = true }

[dev-dependencies]
proptest = "1.0.0"
flexi_logger = "0.23.0"
clap = { version = "4.2.5", features = ["derive"] }
tempfile = "3.3.0"
which = "4.3.0"

[[example]]
name = "ckb-vm-llvm-aoter"
required-features = ["llvm-aot"]
